fix - overlapping stepper similar approach like other moh projects.

--- a/src/app/modules/msp-update/components/update-container/update-container.component.scss
+++ b/src/app/modules/msp-update/components/update-container/update-container.component.scss
@@ -1,3 +1,3 @@
 common-wizard-progress-bar {
-    min-width: 770px !important;
+    min-width: 830px !important;
 }
